@@ -4,6 +4,7 @@
 - optimized and cleaned up @cached_property
 - optimized i?split(), split_at() and split_by()
 - optimized @memoize
+- optimized zipdict()
 Backward incompatible changes:
 - split(), split_at() and split_by() now return a tuple of two lists instead of list of them
 - @cached_property no longer uses _name to store cached value
